# handoff

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PITCH_BRIEF.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.codex/: config.toml
app/: __init__.py  analyzer.py  audit_export.py  contracts.py  demo_data.py  evals.py  handoff_packet.py  llm.py  main.py  model_runtime.py  models.py  providers.py  repository.py  simulation.py  verification.py
app/static/: index.html
app/static/css/: base.css  components.css  tokens.css
app/static/js/: api.js  audit.js  compile.js  dossier.js  dropdown.js  ledger.js  main.js  model.js  roster.js  runledger.js  store.js  theme.js  trust.js  util.js
tests/: conftest.py  test_analyzer.py  test_frontend_playwright.py  test_verification.py
